# bioscouter-core

./: .env.example  .gitattributes  .gitignore  .mailmap  .zenodo.json  AUTHORS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODE_AVAILABILITY.md  REPRODUCIBILITY.md
reproducibility/independent_relevance_evaluation/: ADJUDICATION_TO_COMPLETE.csv  EMAIL_TO_EVALUATORS.md  INDEPENDENT_EVALUATION_RESULTS_SUMMARY.md  RETURN_CHECKLIST.md  SCORING_AFTER_RETURN.md  disagreement_metadata_review.txt  score_returned_top10_labels.py
reproducibility/independent_relevance_evaluation/returned_labels/: BioScouter_Evaluator_A_Labeling_Sheet.csv  BioScouter_Evaluator_B_Labeling_Sheet.csv  PUT_COMPLETED_FILES_HERE.md
reproducibility/independent_relevance_evaluation/scoring_output/: adjudicated_per_query_metrics.csv  agreement_summary.json  (+6 more)
reproducibility/paper/: README.md  analyze_benchmark_upgrade.py  benchmark-freeze.json  benchmark-queries-80.csv  benchmark-queries.csv  controlled-benchmark-queries.csv  controlled_evaluation.py  corpus-construction-queries.csv  expanded-benchmark-queries.csv  finalize_controlled_run.py  independent-labeling-protocol.md  prepare_label_reuse.py  relevance-rubric.md  rerun_benchmark.py  run_concept_ablation.py  run_expanded_benchmark.py  run_source_reliability.py  score_relevance_labels.py  score_three_annotator_labels.py  source-reliability-probes.csv  usability-ethics-protocol.md
src/bioscouter_core/: __init__.py  cli.py  orchestrator.py
tests/: test_orchestrator.py  test_quality_score.py  test_query_routing.py
(+66 files in other folders)
