[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioscouter-core"
version = "0.1.0"
description = "Public scientific core for BioScouter multi-omics dataset discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ibrahim Abdelkarim Hammad", email = "i.abdelkarim@nu.edu.eg" },
  { name = "Amr M. Elhefnawy" }
]
keywords = ["bioinformatics", "multi-omics", "dataset discovery", "federated search", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "biopython>=1.83",
  "httpx>=0.27",
  "pydantic>=2.5",
  "structlog>=24.1",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
bioscouter-core-search = "bioscouter_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "reproducibility/paper/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
